# venom-ai-updated

./: .env.example  README.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  launch_venom.command  main.cjs  metadata.json  package-lock.json  package.json  preload.cjs  pyproject.toml  server.ts  venom_workflow.json  vercel.json
api/: solve.js
components/ui/: tooltip.tsx
public/: manifest.json
src/: App.tsx  index.css
src/components/: CameraFeed.tsx  Typewriter.tsx  VenomCore.tsx  VoiceSettings.tsx
src/hooks/: useVoice.ts
src/lib/: firebase.ts
src/services/: gemini.ts
src/types/: electron.d.ts
